cluster/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: homepage
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/component: caddy
